# routeforge

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  assessment.md  bridge_contract.md  debug_playbook.md  execution_plan.md  function_contracts.md  getting_started.md  index.md  routeforge_redesign.md  student_task_map.md  tdl.md
docs/tdl/: automation.md  mpls.md  multicast.md  resiliency.md  routing.md  wireless.md
docs/tutorial/: lab01_frame_and_headers.md  lab02_mac_learning_switch.md  lab03_vlan_and_trunks.md  lab04_stp.md  lab05_stp_convergence_and_protection.md  lab06_arp_and_adjacency.md  lab07_ipv4_subnet_and_rib.md  lab08_fib_forwarding_pipeline.md  lab09_icmp_and_control_responses.md  lab10_ipv4_control_plane_diagnostics.md  lab11_ospf_adjacency_fsm.md  lab12_ospf_network_types_and_dr_bdr.md  lab13_ospf_lsa_flooding_and_lsdb.md  lab14_ospf_spf_and_route_install.md  lab15_ospf_multi_area_abr.md  lab16_udp_tcp_fundamentals.md  lab17_bfd_for_liveness.md  lab18_acl_pipeline.md  lab19_nat44_stateful_translation.md  lab20_qos_marking_and_queueing.md  lab21_bgp_session_fsm_and_transport.md  lab22_bgp_attributes_and_bestpath.md  lab23_bgp_policy_and_filters.md  lab24_bgp_scaling_patterns.md  lab25_tunnels_and_ipsec.md  lab26_observability_and_ops.md  lab27_capstone_incident_drill.md  lab28_dhcp_snooping_and_dai.md  lab29_port_security_and_ip_source_guard.md  lab30_qos_policing_and_shaping.md  (+9 more)
labs/: assessment_rubric.yaml  conformance_matrix.yaml  student_targets.yaml
(+96 files in other folders)
